fix: home image responsiveness and z-index

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,12 +1,12 @@
-.img-wrap {
+.img-wrap{
   display: flex;
   justify-content: center;
   overflow-x: hidden;
 }
 
-.home-img {
+.home-img{
   position: absolute;
-  z-index: -5;
+  z-index: 0;
   height: 100vh;
   object-fit: cover;
 }
@@ -21,6 +21,7 @@
 }
 
 .home .profile h2 {
+  z-index: 1;
   text-align: center;
   font-size: 20px;
   font-weight: 600;
@@ -31,6 +32,7 @@
 }
 
 .home .profile h1 {
+  z-index: 1;
   text-align: center;
   font-size: 7.2rem;
   line-height: 120%;
@@ -47,6 +49,7 @@
 }
 
 .home .cv{
+  z-index: 1;
   font-weight: 500;
   margin-top: 2.2rem;
   font-size: 0.9rem;
